Bug 129264 - "Warning: failed to read path from javaldx" even with Java disabled
Summary: "Warning: failed to read path from javaldx" even with Java disabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
6.3.2.2 release
Hardware: All Linux (All)
: low trivial
Assignee: Stephan Bergmann
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-07 16:03 UTC by Alberto Salvia Novella
Modified: 2020-07-02 14:59 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alberto Salvia Novella 2019-12-07 16:03:37 UTC
HOW TO REPRODUCE:
1. Uninstall Java
2. Go to "Tools -> Options -> LibreOffice -> Advanced"
3. Disable "Use a Java runtime environment"
4. Close LibreOffice and reopen from the terminal.

RESULT:
- The following warning is shown: failed to read path from javaldx.
Comment 1 Xisco Faulí 2019-12-10 15:58:04 UTC
This is print here: https://opengrok.libreoffice.org/xref/core/desktop/unx/source/start.c?r=206b5b26#686
Just a warning, not a bug.
Comment 2 Alberto Salvia Novella 2019-12-10 18:28:51 UTC
I guess the warning shall only be shown if Java is enabled in the options, or just silently assume Java isn't installed.
Comment 3 Mike Kaganski 2020-07-02 10:27:43 UTC
The check is before any reading of options, but silencing it looks natural.
Comment 4 Stephan Bergmann 2020-07-02 11:44:16 UTC
Something like <https://gerrit.libreoffice.org/c/core/+/97756> "tdf#129264: Make javaldx always print a line upon successful execution" should fix that (but I haven't tested it yet).
Comment 5 Commit Notification 2020-07-02 14:54:00 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/269a161b3855fcdfde084bd0d786f212cbdd2af0

tdf#129264: Make javaldx always print a line upon successful execution

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Stephan Bergmann 2020-07-02 14:59:03 UTC
(In reply to Commit Notification from comment #5)
> Stephan Bergmann committed a patch related to this issue.
> It has been pushed to "master":
> 
> https://git.libreoffice.org/core/commit/
> 269a161b3855fcdfde084bd0d786f212cbdd2af0
> 
> tdf#129264: Make javaldx always print a line upon successful execution

I found that leaving out step 1 from the original reproducer in comment 0 was enough to get the warning, so I only verified that the above fix stops the warning with steps 2--4, without actually uninstalling all the JREs from my development machine.  Let me know if this issue is still not fixed when no JREs are installed on a machine.