tdf#129264: Make javaldx always print a line upon successful execution

...where "do not use a JRE" (implying that the printed line consists of just a
terminating newline) is a sufficient condition for a successful execution, too.

(Also, it appears that extend_library_path in desktop/unx/source/start.c would
have introduced unwanted empty segments into the path environment variable when
the line printed by javaldx consisted of just a terminating newline.)

Change-Id: Ic2f86de8a829b3dea51c0e4da1ac236298e16366